# llm-conversation-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: settings.yml
.github/workflows/: ci.yml
app/: DockerFile  main.py
app/api/: deps.py  routes.py
app/api/v1/: conversations.py  health.py  messages.py  models.py
app/core/: config.py  logging_config.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/observability/: metrics.py
app/repositories/: __init__.py  conversation_repository.py  message_repository.py  model_repository.py
app/schemas/: common.py  conversation.py  message.py  model.py
app/services/: conversation_service.py  message_service.py  model_service.py  ollama_service.py  token_counter.py
docs/: runtime-usage-guide.md
docs/archive/: schema.sql
migrations/: README.md  env.py
migrations/versions/: 20260429_0001_create_core_tables.py
scripts/: bootstrap.sh
tests/: conftest.py
tests/integration/: test_health_endpoints.py
tests/unit/: test_token_counter.py
