[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-conversation-platform"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
addopts = "-q --maxfail=1 --disable-warnings"
